5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1590_1015.log
== TEST (2019-03-27 14:41:31) 
-- CODE:
var = 5
var = 2 
var = 4
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:42:37) 
-- CODE:
var = input(5)
var = input(2) 
var = input(4)

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- OUTPUT:
524
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:43:27) 
-- CODE:
var1 = input(5)
var2 = input(2) 
var3 = input(4)
print(var1 + var2 + var3)
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- OUTPUT:
52410-20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:44:47) 
-- CODE:
var1 = int(input(5))
var2 = int(input(2)) 
var3 = int(input(4))
print(var1 + var2 + var3)

-- OUTPUT:
5248
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:46:39) 
-- CODE:
var1 = int(input(5))
var2 = int(input(2)) 
var3 = int(input(4))
min(var2,var3,var1)
max(var1,var3,var2)

-- OUTPUT:
524
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:46:52) 
-- CODE:
var1 = int(input(6))
var2 = int(input(2)) 
var3 = int(input(4))
min(var2,var3,var1)
max(var1,var3,var2)

-- OUTPUT:
624
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:46:54) 
-- CODE:
var1 = int(input(6))
var2 = int(input(2)) 
var3 = int(input(4))
min(var2,var3,var1)
max(var1,var3,var2)

-- EXECUTION TIME:
0.137345
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
624
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:47:46) 
-- CODE:
var1 = int(input(6))
var2 = int(input(2)) 
var3 = int(input(4))
min(var2,var3,var1)
max(var1,var3,var2)
soma(6+2+4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma(6+2+4)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:26:35) 
-- CODE:
var1 = int(input(6))
var2 = int(input(2)) 
var3 = int(input(4))
min(var2,var3,var1)
max(var1,var3,var2)
soma(6+2+4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma(6+2+4)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:26:55) 
-- CODE:
var1 = int(input(6))
var2 = int(input(2)) 
var3 = int(input(4))
min(var2,var3,var1)
max(var1,var3,var2)
soma(6+2+4)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma(6+2+4)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:58:01) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))
Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)
print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:58:02) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))
Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)
print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.107822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 6, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:58:20) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:58:22) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.200662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:58:23) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:58:28) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:58:33) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:01) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:59:02) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.16823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:10) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:16) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:59:17) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.134923
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:32) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:42) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:45) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:59:45) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.146651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:53) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:00:01) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:07:38) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:08:40) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:34:32) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.15206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:34:41) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:35:12) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:35:45) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.126944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:35:49) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:37:24) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- EXECUTION TIME:
0.259225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:37:29) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:27:20) 
-- CODE:
num1 = int(input("digite numero 1: "))
num2 = int(input("digite numero 2: ")) 
num3 = int(input("digite numero 3: "))

Interm = num1 + num2 + num3 - min(num1, num2, num3) - max(num1, num2, num3)

print(min(num1, num2, num3))
print(interm)
print(max(num1, num2, num3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(interm)
NameError: name 'interm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
